many small code changes to adhere to coding standards, findbugs items, eclipse warnings, imports, Generics, comment out unused methods, don't use toURL() on File, don't use URL as key in maps, ...